--- a/ksdk.yml
+++ b/ksdk.yml
@@ -26,5 +26,6 @@ dependencies:
   - oauth2==1.9.0.post1
   - py-ubjson==0.12.0
   - pylint==2.2.2
+  - pyrsistent==0.14.11
   - sphinx-materialdesign-theme==0.0.4
   - sphinx==1.6.6
