--- a/conda/kcc/meta.yaml
+++ b/conda/kcc/meta.yaml
@@ -7,15 +7,15 @@ source:
 
 build:
   number: 0
-  string: 1551867346
+  string: 1553932846
 
 requirements:
   build:
     - cmake
     - bullet ==2.83
-    - panda3d-kitsunetsuki ==1.10.1
+    - panda3d-kitsunetsuki >=1.10.1
   run:
-    - panda3d-kitsunetsuki ==1.10.1
+    - panda3d-kitsunetsuki >=1.10.1
 
 about:
   home: https://launchpad.net/kitsunetsuki-sdk
