--- a/conda/panda3d/meta.yaml
+++ b/conda/panda3d/meta.yaml
@@ -1,10 +1,10 @@
 package:
   name: panda3d-kitsunetsuki
-  version: "1.10.1"
+  version: "1.10.2"
 
 source:
   - git_url: https://github.com/panda3d/panda3d.git
-    git_rev: v1.10.1
+    git_rev: v1.10.2
     folder: .
     patches:
       - prefix-110.patch # [win]
@@ -12,6 +12,9 @@ source:
       - bullet.patch
       - icon.patch # [unix]
       - is_nan.patch
+      - egg1.patch
+      - egg2.patch
+      - egg3.patch
 
   - url: http://rdb.name/thirdparty-vc14.7z # [win32]
     folder: thirdparty # [win32]
@@ -23,7 +26,7 @@ source:
 
 build:
   number: 0
-  string: 1551867346
+  string: 1553932846
 
 requirements:
   build:
