--- a/conda/runtime/meta.yaml
+++ b/conda/runtime/meta.yaml
@@ -11,7 +11,7 @@ build:
 
 requirements:
   build:
-    - panda3d-kitsunetsuki ==1.10.1
+    - panda3d-kitsunetsuki >=1.10.2
     - kcc ==0.1
     - 7za # [win]
 
