--- a/conda/render_pipeline/meta.yaml
+++ b/conda/render_pipeline/meta.yaml
@@ -13,17 +13,18 @@ source:
 
 build:
   number: 0
-  string: 1586162737
+  string: 1586172956
 
 requirements:
   build:
-    - python
+    - python <3.8
+    - openssl >=1.1.1f
     - panda3d-kitsunetsuki >=1.10.6
     - m2-gcc-libs # [win]
     - m2-patch # [win]
     - msinttypes # [win]
   run:
-    - python
+    - python <3.8
     - panda3d-kitsunetsuki >=1.10.6
     - pyqt
 
