--- a/conda/panda3d/meta.yaml
+++ b/conda/panda3d/meta.yaml
@@ -28,8 +28,9 @@ build:
   string: 1588230447
 
   missing_dso_whitelist:
+    - $RPATH/libCg.so
     - $RPATH/libCgGL.so
-    - $RPATH/libGL.so.1
+    - $RPATH/libX11.so.6
     - $RPATH/libc.so.6
     - $RPATH/libdl.so.2
     - $RPATH/libm.so.6
@@ -55,7 +56,6 @@ requirements:
     - python >=3.8
     - zlib
   run:
-    - fontconfig # [unix]
     - freetype # [unix]
     - libgcc-ng # [unix]
     - libpng
