--- a/ksdk.yml
+++ b/ksdk.yml
@@ -6,19 +6,18 @@ channels:
 
 dependencies:
 - conda
-- python
 - cmake
-- pyqt
-- panda3d-kitsunetsuki ==1.10.2
-- panda3d-rp-kitsunetsuki ==1.3
-- kcc ==0.1
+- python >=3.8
+- cython ==0.29.17
+- jinja2 ==2.11.2
+- flake8==3.7.9
+- panda3d-kitsunetsuki
+- panda3d-rp-kitsunetsuki
+- kcc
 - pip:
-  - Cython==0.29.5
-  - Jinja2==2.10
   - PyYAML==3.12
   - attrs==19.1.0
   - epc==0.0.5
-  - flake8==3.6.0
   - httplib2==0.12.1
   - idna==2.8
   - jedi==0.11.0
