--- a/conda/panda3d/meta.yaml
+++ b/conda/panda3d/meta.yaml
@@ -37,10 +37,18 @@ build:
     - $RPATH/libm.so.6 # [unix]
     - $RPATH/libopenal.so.1 # [unix]
     - $RPATH/libpthread.so.0 # [unix]
+    - $RPATH\D3DCOMPILER_43.dll # [win]
+    - $RPATH\d3dx10_43.dll # [win]
+    - $RPATH\d3dx11_43.dll # [win]
+    - C:\Windows\System32\GLU32.dll # [win]
     - C:\Windows\System32\MSVCP140.dll # [win]
     - C:\Windows\System32\OPENGL32.dll # [win]
+    - C:\Windows\System32\SETUPAPI.dll # [win]
     - C:\Windows\System32\VCRUNTIME140.dll # [win]
+    - C:\Windows\System32\VCRUNTIME140_1.dll # [win]
+    - C:\Windows\System32\WINMM.dll # [win]
     - C:\Windows\System32\WSOCK32.dll # [win]
+    - C:\Windows\System32\d3d10.dll # [win]
     - Library\bin\MSVCP140.dll # [win]
     - Library\bin\VCRUNTIME140.dll # [win]
 
