--- a/conda/panda3d/meta.yaml
+++ b/conda/panda3d/meta.yaml
@@ -41,6 +41,7 @@ build:
     - $RPATH\d3dx10_43.dll # [win]
     - $RPATH\d3dx11_43.dll # [win]
     - C:\Windows\System32\GLU32.dll # [win]
+    - C:\Windows\System32\IPHLPAPI.DLL # [win]
     - C:\Windows\System32\MSVCP140.dll # [win]
     - C:\Windows\System32\OPENGL32.dll # [win]
     - C:\Windows\System32\SETUPAPI.dll # [win]
