--- a/ksdk.yml
+++ b/ksdk.yml
@@ -9,24 +9,24 @@ dependencies:
 - conda
 - cython ==0.29.17
 - flake8 ==3.7.9
+- idna ==2.9
 - jedi ==0.16.0
 - jinja2 ==2.11.2
+- jsonschema ==3.2.0
 - kcc
-- panda3d-kitsunetsuki
-- panda3d-rp-kitsunetsuki
+- panda3d
+- pyqt ==5.9.2
+- pyrsistent ==0.16.0
 - python >=3.8
+- setuptools==46.1.3
+- six ==1.14.0
+- sphinx ==3.0.3
+- twine ==2.0.0
 - pip:
   - PyYAML==3.12
-  - attrs==19.1.0
   - epc==0.0.5
-  - httplib2==0.12.1
-  - idna==2.8
-  - jsonschema==2.6.0
+  - httplib2==0.17.3
   - oauth2==1.9.0.post1
   - py-ubjson==0.12.0
   - pylint==2.2.2
-  - pyrsistent==0.14.11
-  - setuptools==40.8.0
-  - six==1.12.0
-  - sphinx-materialdesign-theme==0.0.4
-  - sphinx==1.6.6
+  - sphinx-materialdesign-theme==0.1.11
