--- a/conda/runtime/meta.yaml
+++ b/conda/runtime/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: kitsunetsuki-runtime
-  version: "0.5"
+  version: "0.6"
 
 source:
   path: .
@@ -11,9 +11,8 @@ build:
 
 requirements:
   build:
-    - panda3d-kitsunetsuki >=1.10.6
-    - panda3d-rp-kitsunetsuki >=1.3
-    - kcc ==0.1
+    - panda3d
+    - kcc
     - 7za # [win]
 
 about:
