--- a/conda/panda3d/meta.yaml
+++ b/conda/panda3d/meta.yaml
@@ -60,6 +60,7 @@ requirements:
     - fontconfig # [unix]
     - freetype # [unix]
     - libgcc-ng # [unix]
+    - libogg # [unix]
     - libpng
     - libstdcxx-ng # [unix]
     - libvorbis # [unix]
@@ -67,13 +68,13 @@ requirements:
     - m2-patch # [win]
     - msinttypes # [win]
     - openssl >=1.1.1g
-    - patchelf # [unix]
     - pillow # [unix]
     - python >=3.8
     - zlib
   run:
     - freetype # [unix]
     - libgcc-ng # [unix]
+    - libogg # [unix]
     - libpng
     - libstdcxx-ng # [unix]
     - libvorbis # [unix]
