--- a/ksdk.yml
+++ b/ksdk.yml
@@ -26,8 +26,9 @@ dependencies:
 - pip:
   - PyYAML==3.12
   - epc==0.0.5
+  - attrs==19.3.0
   - httplib2==0.17.3
   - oauth2==1.9.0.post1
-  - py-ubjson==0.12.0
+  - py-ubjson==0.16.1
   - pylint==2.2.2
   - sphinx-materialdesign-theme==0.1.11
