--- a/conda/blender-thirdparty/meta.yaml
+++ b/conda/blender-thirdparty/meta.yaml
@@ -33,6 +33,7 @@ requirements:
     - libgcc-ng # [unix]
     - libpng # [unix]
     - libstdcxx-ng # [unix]
+    - libtiff
     - m2-gcc-libs # [win]
     - m2-patch # [win]
     - python >=3.8
@@ -41,6 +42,7 @@ requirements:
     - libgcc-ng # [unix]
     - libpng # [unix]
     - libstdcxx-ng # [unix]
+    - libtiff # [unix]
     - zlib # [unix]
 
 about:
