--- a/conda/blender-thirdparty/meta.yaml
+++ b/conda/blender-thirdparty/meta.yaml
@@ -21,13 +21,14 @@ build:
 
   missing_dso_whitelist:
     - $RPATH/ld-linux-x86-64.so.2 # [unix]
+    - $RPATH/libHalf-2_3.so.24 # [unix]
+    - $RPATH/libIex-2_3.so.24 # [unix]
+    - $RPATH/libIlmImf-2_3.so.24 # [unix]
     - $RPATH/libc.so.6 # [unix]
     - $RPATH/libdl.so.2 # [unix]
     - $RPATH/libm.so.6 # [unix]
     - $RPATH/libpthread.so.0 # [unix]
     - $RPATH/librt.so.1 # [unix]
-    - $RPATH/libIlmImf-2_3.so.24 # [unix]
-    - $RPATH/libIex-2_3.so.24 # [unix]
 
 requirements:
   build:
