--- a/conda/blender/meta.yaml
+++ b/conda/blender/meta.yaml
@@ -4,23 +4,23 @@ package:
 
 source:
   - git_url: git://git.blender.org/blender-addons.git
-    git_rev: v2.81a
+    git_rev: v2.81
     folder: blender_extras/release/scripts/addons
 
   - git_url: git://git.blender.org/blender-addons-contrib.git
-    git_rev: v2.81a
+    git_rev: v2.81
     folder: blender_extras/release/scripts/addons_contrib
 
   - git_url: git://git.blender.org/blender-translations.git
-    git_rev: v2.81a
+    git_rev: v2.81
     folder: blender_extras/release/datafiles/locale
 
   - git_url: git://git.blender.org/blender-dev-tools.git
-    git_rev: v2.81a
+    git_rev: v2.81
     folder: blender_extras/source/tools
 
   - git_url: git://git.blender.org/blender.git
-    git_rev: v2.81a
+    git_rev: v2.81
     folder: blender
 
   - svn_url: https://svn.blender.org/svnroot/bf-blender/trunk/lib/windows_vc14 # [win32]
