--- a/conda/blender/meta.yaml
+++ b/conda/blender/meta.yaml
@@ -33,6 +33,17 @@ build:
   number: 0
   string: 1588839915
 
+  missing_dso_whitelist:
+    - $RPATH/ld-linux-x86-64.so.2 # [unix]
+    - $RPATH/libGL.so.1 # [unix]
+    - $RPATH/libHalf-2_3.so.24 # [unix]
+    - $RPATH/libIex-2_3.so.24 # [unix]
+    - $RPATH/libIlmImf-2_3.so.24 # [unix]
+    - $RPATH/libc.so.6 # [unix]
+    - $RPATH/libdl.so.2 # [unix]
+    - $RPATH/libm.so.6 # [unix]
+    - $RPATH/libpthread.so.0 # [unix]
+
 requirements:
   build:
     - blender-thirdparty # [unix]
