--- a/conda/blender/meta.yaml
+++ b/conda/blender/meta.yaml
@@ -53,12 +53,12 @@ requirements:
     - libgcc-ng # [unix]
     - libpng # [unix]
     - libstdcxx-ng # [unix]
-    - libtiff
+    - libtiff # [unix]
     - llvmdev # [unix]
     - m2-patch # [win]
     - python >=3.8
     - requests # [unix]
-    - svn
+    - svn # [unix]
     - zlib
   run:
     - freetype # [unix]
