--- a/conda/runtime/meta.yaml
+++ b/conda/runtime/meta.yaml
@@ -48,6 +48,7 @@ requirements:
     - pyrsistent ==0.16.0
     - python >=3.8
     - six ==1.14.0
+    - pytest-runner
   run:
     - freetype # [unix]
     - libgcc-ng # [unix]
