--- a/conda/blender/meta.yaml
+++ b/conda/blender/meta.yaml
@@ -42,6 +42,10 @@ build:
     - $RPATH/libdl.so.2 # [unix]
     - $RPATH/libm.so.6 # [unix]
     - $RPATH/libpthread.so.0 # [unix]
+    - C:\Windows\System32\MSVCP140.dll # [win]
+    - C:\Windows\System32\OPENGL32.dll # [win]
+    - C:\Windows\System32\VCRUNTIME140.dll # [win]
+    - C:\Windows\System32\VCRUNTIME140_1.dll # [win]
 
 requirements:
   build:
