--- a/ksdk.yml
+++ b/ksdk.yml
@@ -25,7 +25,6 @@ dependencies:
 - sphinx ==3.0.3
 - twine ==2.0.0
 - pip:
-  - PyYAML==3.12
   - epc==0.0.5
   - httplib2==0.17.3
   - oauth2==1.9.0.post1
@@ -33,3 +32,6 @@ dependencies:
   - py-ubjson==0.16.1
   - pylint==2.2.2
   - sphinx-materialdesign-theme==0.1.11
+  - git+https://github.com/kitsune-ONE-team/panda3d-gltf.git@ksdk
+  - git+https://github.com/kitsune-ONE-team/KITSUNETSUKI-Asset-Tools.git
+  - https://github.com/kitsune-ONE-team/RenderPipeline/releases/download/v1.3.6/render_pipeline-1.3.6-py3-none-any.whl
