--- a/conda/blender/meta.yaml
+++ b/conda/blender/meta.yaml
@@ -70,6 +70,7 @@ requirements:
     - requests # [unix]
     # - svn # [win]
     - zlib
+    - gcc_linux-64 ==7.2.0 # [unix]
   run:
     - freetype # [unix]
     - jpeg # [unix]
