--- a/conda/blender/meta.yaml
+++ b/conda/blender/meta.yaml
@@ -24,6 +24,7 @@ source:
     folder: blender
     patches:
       - platform.patch # [win]
+      - optional.patch # [unix]
 
   # - svn_url: https://svn.blender.org/svnroot/bf-blender/trunk/lib/windows_vc14 # [win32]
   #   folder: lib/windows_vc14 # [win32]
@@ -57,11 +58,9 @@ requirements:
     - cmake
     - fontconfig # [unix]
     - freetype # [unix]
-    - gcc_linux-64 ==7.2.0 # [unix]
     - git
-    - gxx_linux-64 ==7.2.0 # [unix]
     - jpeg
-    - libgcc ==7.2.0 # [unix]
+    - libgcc # [unix]
     - libpng # [unix]
     - libtiff # [unix]
     - llvmdev # [unix]
@@ -70,12 +69,10 @@ requirements:
     - python >=3.8
     - requests # [unix]
     - zlib
-    - gcc_impl_linux-64 # [unix]
-    - glib # [unix]
   run:
     - freetype # [unix]
     - jpeg # [unix]
-    - libgcc ==7.2.0 # [unix]
+    - libgcc # [unix]
     - libpng # [unix]
     - libtiff # [unix]
     - python >=3.8
