--- a/conda/blender/meta.yaml
+++ b/conda/blender/meta.yaml
@@ -24,7 +24,7 @@ source:
     folder: blender
     patches:
       - platform.patch # [win]
-      - optional.patch # [unix]
+      # - optional.patch # [unix]
 
   # - svn_url: https://svn.blender.org/svnroot/bf-blender/trunk/lib/windows_vc14 # [win32]
   #   folder: lib/windows_vc14 # [win32]
