--- a/conda/blender/meta.yaml
+++ b/conda/blender/meta.yaml
@@ -59,9 +59,9 @@ requirements:
     - freetype # [unix]
     - git
     - jpeg
-    - libgcc-ng
+    - libgcc-ng # [unix]
     - libpng # [unix]
-    - libstdcxx-ng
+    - libstdcxx-ng # [unix]
     - libtiff # [unix]
     - llvmdev # [unix]
     - m2-patch # [win]
@@ -72,9 +72,9 @@ requirements:
   run:
     - freetype # [unix]
     - jpeg # [unix]
-    - libgcc-ng
+    - libgcc-ng # [unix]
     - libpng # [unix]
-    - libstdcxx-ng
+    - libstdcxx-ng # [unix]
     - libtiff # [unix]
     - python >=3.8
     - zlib # [unix]
