--- a/conda/blender/meta.yaml
+++ b/conda/blender/meta.yaml
@@ -23,11 +23,8 @@ source:
     git_rev: v2.90.0
     folder: blender
 
-  # - svn_url: https://svn.blender.org/svnroot/bf-blender/trunk/lib/windows_vc14 # [win32]
-  #   folder: lib/windows_vc14 # [win32]
-
-  # - svn_url: https://svn.blender.org/svnroot/bf-blender/trunk/lib/win64_vc14 # [win64]
-  #   folder: lib/win64_vc14 # [win64]
+  - svn_url: https://svn.blender.org/svnroot/bf-blender/trunk/lib/win64_vc15 # [win64]
+    folder: lib/win64_vc15 # [win64]
 
 build:
   number: 0
