--- a/conda/blender/meta.yaml
+++ b/conda/blender/meta.yaml
@@ -3,25 +3,25 @@ package:
   version: "2.90"
 
 source:
-  - git_url: git://git.blender.org/blender-addons.git
-    git_rev: v2.90.0
-    folder: blender_extras/release/scripts/addons
-
-  - git_url: git://git.blender.org/blender-addons-contrib.git
-    git_rev: v2.90.0
-    folder: blender_extras/release/scripts/addons_contrib
-
-  - git_url: git://git.blender.org/blender-translations.git
-    git_rev: v2.90.0
-    folder: blender_extras/release/datafiles/locale
-
-  - git_url: git://git.blender.org/blender-dev-tools.git
-    git_rev: v2.90.0
-    folder: blender_extras/source/tools
-
   - git_url: git://git.blender.org/blender.git
     git_rev: v2.90.0
     folder: blender
+
+  - git_url: git://git.blender.org/blender-addons.git
+    git_rev: v2.90.0
+    folder: blender/release/scripts/addons
+
+  - git_url: git://git.blender.org/blender-addons-contrib.git
+    git_rev: v2.90.0
+    folder: blender/release/scripts/addons_contrib
+
+  - git_url: git://git.blender.org/blender-translations.git
+    git_rev: v2.90.0
+    folder: blender/release/datafiles/locale
+
+  - git_url: git://git.blender.org/blender-dev-tools.git
+    git_rev: v2.90.0
+    folder: blender/source/tools
 
   - svn_url: https://svn.blender.org/svnroot/bf-blender/trunk/lib/win64_vc15 # [win64]
     folder: lib/win64_vc15 # [win64]
