--- a/conda/panda3d/meta.yaml
+++ b/conda/panda3d/meta.yaml
@@ -72,6 +72,7 @@ requirements:
     - libstdcxx-ng # [unix]
     - libvorbis # [unix]
     - python >=3.8
+    - vs2015_runtime # [win]
     - zlib # [unix]
 
 about:
