--- a/conda/runtime/meta.yaml
+++ b/conda/runtime/meta.yaml
@@ -22,6 +22,9 @@ build:
     - $RPATH/libpthread.so.0 # [unix]
     - $RPATH/librt.so.1 # [unix]
     - $RPATH/libutil.so.1 # [unix]
+    - $RPATH\api-ms-win-core-winrt-error-l1-1-0.dll # [win]
+    - $RPATH\api-ms-win-core-winrt-l1-1-0.dll # [win]
+    - $RPATH\api-ms-win-core-winrt-string-l1-1-0.dll # [win]
     - $RPATH\libffi-7.dll # [win]
     - $RPATH\pgort140.DLL # [win]
     - C:\Windows\System32\GLU32.dll # [win]
