--- a/conda/panda3d/meta.yaml
+++ b/conda/panda3d/meta.yaml
@@ -1,10 +1,10 @@
 package:
   name: panda3d
-  version: "1.10.7"
+  version: "1.10.8"
 
 source:
   - git_url: https://github.com/panda3d/panda3d.git
-    git_rev: v1.10.7
+    git_rev: c788912070dff220e3ed829d77bc86bdb1811c1c
     folder: .
     patches:
       - prefix.patch # [win]
