--- a/conda/blender/meta.yaml
+++ b/conda/blender/meta.yaml
@@ -64,7 +64,7 @@ requirements:
     - llvmdev # [unix]
     - m2-patch # [win]
     - openjpeg
-    - python >=3.8
+    - python ==3.8
     - requests # [unix]
     - zlib
   run:
@@ -74,7 +74,7 @@ requirements:
     - libpng # [unix]
     - libstdcxx-ng # [unix]
     - libtiff # [unix]
-    - python >=3.8
+    - python ==3.8
     - zlib # [unix]
 
 about:
