--- a/conda/blender/meta.yaml
+++ b/conda/blender/meta.yaml
@@ -34,6 +34,7 @@ build:
   string: 1612955710
 
   missing_dso_whitelist:
+    - /lib64/ld-linux-x86-64.so.2 # [unix]
     - $RPATH/ld-linux-x86-64.so.2 # [unix]
     - $RPATH/libGL.so.1 # [unix]
     - $RPATH/libc.so.6 # [unix]
